# ChatDeck

./: .flake8  .gitignore  .pre-commit-config.yaml  ANKI_ADDON_PUBLISHING_GUIDE.md  DEPLOY.md  Dockerfile  FILE_MAPPING.md  PROJECT_GUIDE.md  SUPABASE_SETUP.md  TECHNICAL_DECISIONS.md  deploy-azure-free.sh  deploy-railway.sh  deploy-supabase.sh  docker-compose.yml  package-addon.ps1  pyproject.toml  readme.md  simple_db_test.py  test_autoclean.py  test_db_standalone.py  test_validators.py  todo.md
.github/workflows/: copilot-instructions.md  python-app.yml
anki-addon/: README.md  __init__.py  config.json  config.md  gui.py  manifest.json  sync_service.py
fcg/: exceptions.py  main.py  models.py  schemas.py
fcg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fcg/config/: container.py  settings.py
fcg/development/: conversation.pkl  dspy_anki.ipynb  dspy_poc.py  format.html  notion_poc.py
fcg/fcg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fcg/interfaces/: export_service.py  flashcard_generator_service.py  flashcard_repository.py
fcg/models/: __init__.py  api.py  flashcard.py
fcg/repositories/: notion_repository.py
fcg/routes/: flashcard_api.py  flashcard_generation.py
fcg/services/: anki_export_service.py  database.py  openrouter_flashcard_service.py
fcg/tests/: TEST_DOCUMENTATION.md  conftest.py  test_anki_connection.py  test_anki_export_service.py  test_database_service.py  test_flashcard_api.py  test_flashcard_generator.py  test_integration.py  test_use_cases.py  test_validators.py
fcg/use_cases/: flashcard_use_case.py
fcg/utils/: anki.py  dspy_flashcard_generator.py  flashcard_generator.py  logging.py  notion.py
flash-card-extension/: content_listener.js  content_script.js  manifest.json
static/: text-flashcard-generator.html
