[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcg"
version = "0.1.0"
description = "Flashcard Generator"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT License" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "notion-client>=2.0.0",
    "pytest",
    "pytest-asyncio>=0.21.0",
]


[project.optional-dependencies]
dev = ["pytest", "black", "flake8","pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fcg"]
