[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcg"
version = "0.1.0"
description = "Flashcard Generator"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT License" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "notion-client>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL adapter
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]


[project.optional-dependencies]
dev = ["pytest", "black", "flake8","pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fcg"]

[tool.black]
line-length = 127
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127

[tool.pytest.ini_options]
# Test discovery
testpaths = ["fcg/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10"
]

# Markers for different test types
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "llm: Tests that call LLM APIs (may be slow)",
    "anki: Tests that require Anki connection",
    "slow: Slow running tests",
    "network: Tests that require network access"
]

# Async support
asyncio_mode = "auto"

# Minimum version
minversion = "7.0"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
